[package]
name = "skeptic-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytecount = "0.6.8"
glob = "0.3.2"
pulldown-cmark = "0.13.0"
ansi_term = "0.12.1"



anyhow = "1.0.98"
approx = "0.5.1"
base64 = "0.22.1"
bitflags = "2.9.1"
byteorder = "1.5.0"
chrono = "0.4.41"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
csv = "1.3.1"
clap = "4.5"
cc = "1.2"
data-encoding = "2.9.0"
env_logger = "0.11.8"
error-chain = "0.12.4"
flate2 = "1.1.1"
image = "0.25.6"
lazy_static = "1.5.0"
log = "0.4.27"
log4rs = "1.3.0"
memmap = "0.7.0"
mime = "0.3.17"
nalgebra = {version="0.33.2",features=["serde-serialize"]}
ndarray = { version = "0.16.1", features = ["approx"] }
num = "0.4.3"
num_cpus = "1.16.0"
percent-encoding = "2.3.1"
postgres = "0.19.10"
rand = "0.9.1"
rand_distr = "0.5.1"
rayon = "1.10.0"
regex = {version="1.11.1"}
reqwest = {version = "0.12.15",features=["blocking","json"]}
ring = "0.17.14"
rusqlite = "0.35.0"
same-file = "1.0.6"
select = "0.6.1"
semver = "1.0.26"
serde = "1.0.219"
serde_json = "1.0.140"
syslog = "7.0.0"
tar = "0.4.44"
tempfile = "3.20.0"
thiserror = "2.0.12"
threadpool = "1.8.1"
tokio ={version= "1.45.0",features=["full"]}
toml = "0.8.22"
unicode-segmentation = "1.12.0"
url = "2.5.4"
walkdir = "2.5.0"


