[package]
name = "skeptic-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "library to test rust snippets in markdown files"
repository = "https://github.com/Karthik-S-Salian/skeptic-rs/"
readme = "README.md"

[dependencies]
bytecount = "0.6.8"
glob = "0.3.2"
pulldown-cmark = "0.13.0"
ansi_term = "0.12.1"